<resources>
    <string name="app_name">Innovexia</string>

    <!-- Drawer Toggle -->
    <string name="open">Open</string>
    <string name="close">Close</string>
    <!-- Drawer Toggle -->

    <!-- Dialogs -->
    <string name="create_slide">Create Slide</string>
    <string name="add_to_slide">Add to Slide</string>
    <string name="enter_slide_name">Enter Slide Name</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="select_slide">Select Slide</string>
    <string name="select">Select</string>
    <!-- Dialogs -->

    <!-- Menu -->
    <string name="slides">Slides</string>
    <string name="logout">Log out</string>
    <string name="manage_slides">Manage Slides</string>
    <!-- Menu -->

    <!-- Activities -->
    <string name="enter_email">Enter Email</string>
    <string name="email_or_username">Enter Email or Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_username">Enter Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="send_password">Send new password to this email</string>
    <string name="enter_buyer">Enter Buyer</string>
    <string name="enter_products">Enter Products</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="location">Location</string>
    <string name="submit">Submit</string>
    <string name="products">Products</string>
    <string name="create_visit">Create Visit</string>
    <string name="sync">Sync Database</string>
    <string name="profile">My Profile</string>
    <string name="username">username</string>
    <string name="email">email</string>
    <string name="first_name">first name</string>
    <string name="last_name">last name</string>
    <string name="phone">phone</string>
    <string name="update">Update</string>
    <string name="my_visits">My Visits</string>
    <!-- Activities -->

</resources>
