<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_marginBottom="16dp"
        android:theme="@style/SmallText"
        android:text="@string/select_slide"/>
    
    <com.shawnlin.numberpicker.NumberPicker
        android:id="@+id/dls_slide_picker"
        android:layout_width="100dp"
        android:layout_height="180dp"
        android:layout_gravity="center_horizontal"
        app:np_textSize="12sp"
        app:np_selectedTextSize="14sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp">

        <Button
            android:id="@+id/dls_cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:textAppearance="@style/NormalText.Accent"
            android:text="@string/cancel"/>

        <Button
            android:id="@+id/dls_select_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:textAppearance="@style/NormalText.Accent"
            android:text="@string/select"/>

    </LinearLayout>


</LinearLayout>