<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/al_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/al_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/AppBar">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/app_name"
                android:theme="@style/AppBarText" />
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/al_const_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.constraint.Guideline
            android:id="@+id/al_vguide1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1" />

        <android.support.constraint.Guideline
            android:id="@+id/al_vguide2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.9" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/al_input_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toTopOf="@+id/al_input_password"
            app:layout_constraintEnd_toStartOf="@+id/al_vguide2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/al_vguide1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/al_email_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_or_username"
                android:inputType="textEmailAddress"
                android:maxLength="50"
                android:maxLines="1"
                android:textAppearance="@style/NormalText" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/al_input_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/al_login_btn"
            app:layout_constraintEnd_toStartOf="@+id/al_vguide2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/al_vguide1"
            app:layout_constraintTop_toBottomOf="@+id/al_input_email">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/al_password_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:maxLength="50"
                android:maxLines="1"
                android:textAppearance="@style/NormalText" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/al_login_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:text="@string/login"
            android:textAppearance="@style/SmallText"
            android:theme="@style/ButtonPrimary"
            app:layout_constraintBottom_toTopOf="@+id/al_error_view"
            app:layout_constraintEnd_toStartOf="@+id/al_register_btn"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="@+id/al_vguide1"
            app:layout_constraintTop_toBottomOf="@+id/al_input_password" />

        <Button
            android:id="@+id/al_register_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:text="@string/register"
            android:textAppearance="@style/SmallText"
            android:theme="@style/ButtonAccent"
            app:layout_constraintBaseline_toBaselineOf="@+id/al_login_btn"
            app:layout_constraintEnd_toEndOf="@+id/al_input_password"
            app:layout_constraintEnd_toStartOf="@+id/al_vguide2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/al_login_btn" />

        <TextView
            android:id="@+id/al_error_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:textAppearance="@style/NormalText"
            android:textColor="#e74c3c"
            app:layout_constraintBottom_toTopOf="@+id/al_pbar"
            app:layout_constraintEnd_toStartOf="@+id/al_vguide2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/al_vguide1"
            app:layout_constraintTop_toBottomOf="@+id/al_login_btn"
            tools:text="Error View" />

        <ProgressBar
            android:id="@+id/al_pbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/al_forgot_password"
            app:layout_constraintEnd_toStartOf="@+id/al_vguide2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/al_vguide1"
            app:layout_constraintTop_toBottomOf="@+id/al_error_view" />

        <TextView
            android:id="@+id/al_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:padding="8dp"
            android:text="@string/forgot_password"
            android:textColor="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/al_vguide2"
            app:layout_constraintStart_toStartOf="@+id/al_vguide1" />
    </android.support.constraint.ConstraintLayout>


</android.support.design.widget.CoordinatorLayout>