<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    android:id="@+id/ar_cord_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/ar_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.Toolbar
            android:id="@+id/ar_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:elevation="4dp"
            android:theme="@style/AppBar">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:theme="@style/AppBarText"
                android:text="@string/app_name"/>
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>


    <android.support.constraint.ConstraintLayout
        android:id="@+id/ar_const_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.constraint.Guideline
            android:id="@+id/ar_vguide1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1" />

        <android.support.constraint.Guideline
            android:id="@+id/ar_vguide2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.9" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/ar_username_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toTopOf="@+id/ar_email_input"
            app:layout_constraintEnd_toStartOf="@+id/ar_vguide2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/ar_vguide1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/ar_username_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_username"
                android:inputType="textPersonName"
                android:maxLength="50"
                android:maxLines="1"
                android:textAppearance="@style/NormalText" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/ar_email_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toTopOf="@+id/ar_password_input"
            app:layout_constraintEnd_toStartOf="@+id/ar_vguide2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/ar_vguide1"
            app:layout_constraintTop_toBottomOf="@+id/ar_username_input">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/ar_email_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_email"
                android:inputType="textEmailAddress"
                android:maxLength="50"
                android:maxLines="1"
                android:textAppearance="@style/NormalText" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/ar_password_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toTopOf="@+id/ar_confirm_password_input"
            app:layout_constraintEnd_toStartOf="@+id/ar_vguide2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/ar_vguide1"
            app:layout_constraintTop_toBottomOf="@+id/ar_email_input">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/ar_password_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:maxLength="50"
                android:maxLines="1"
                android:textAppearance="@style/NormalText" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/ar_confirm_password_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toTopOf="@+id/ar_register_btn"
            app:layout_constraintEnd_toStartOf="@+id/ar_vguide2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/ar_vguide1"
            app:layout_constraintTop_toBottomOf="@+id/ar_password_input">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/ar_confirm_password_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:maxLength="50"
                android:maxLines="1"
                android:textAppearance="@style/NormalText" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/ar_register_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/register"
            android:textAppearance="@style/SmallText"
            android:theme="@style/ButtonAccent"
            app:layout_constraintBottom_toTopOf="@+id/ar_error_view"
            app:layout_constraintEnd_toStartOf="@+id/ar_vguide2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/ar_vguide1"
            app:layout_constraintTop_toBottomOf="@+id/ar_confirm_password_input" />

        <TextView
            android:id="@+id/ar_error_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:textAppearance="@style/NormalText"
            android:textColor="#e74c3c"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/ar_pbar"
            app:layout_constraintEnd_toStartOf="@+id/ar_vguide2"
            app:layout_constraintStart_toStartOf="@+id/ar_vguide1"
            app:layout_constraintTop_toBottomOf="@+id/ar_register_btn"
            tools:text="Error view" />

        <ProgressBar
            android:id="@+id/ar_pbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/ar_vguide2"
            app:layout_constraintStart_toStartOf="@+id/ar_vguide1"
            app:layout_constraintTop_toBottomOf="@+id/ar_error_view" />

</android.support.constraint.ConstraintLayout>
</android.support.design.widget.CoordinatorLayout>